# oministore

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CHECKLIST.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEVELOPMENT_STATUS.md  DOCS_INDEX.md  Dockerfile  EXECUTIVE_SUMMARY.md  README.md  SIMPLE_SETUP.md  docker-compose.yaml
docs/: EXECUTIVE_SUMMARY.md  INDEX.md  MVP_PLAN.md  README.md
docs/guides/: QUICK_REFERENCE.md
docs/technical/: ARCHITECTURE.md  CHECKLIST.md
src/: main.rs
src/api/: admin.rs  audit_log.rs  auth.rs  cart.rs  cart_item.rs  category.rs  collection.rs  coupon.rs  customer.rs  inventory.rs  mod.rs  order.rs  product.rs  shipping.rs  store.rs  upload.rs  user.rs  warehouse.rs  webhooks.rs
src/models/: audit_log.rs  cart.rs  cart_item.rs  category.rs  collection.rs  coupon.rs  customer.rs  field.rs  inventory.rs  mod.rs  order.rs  product.rs  shipping.rs  store.rs  user.rs  warehouse.rs
src/services/: cache.rs  firebase.rs  mod.rs  mongo.rs  storage.rs
