[package]
name = "omnistore"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
axum-server = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
mongodb = "2.5"
tokio = { version = "1.38", features = ["full"] }
futures = "0.3"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.5", features = ["cors"] }
